test/zinc_source/compile_errors/functions/26_ufcs_alias_import_not_visible.zn
// expected-error: no member 'add' and no visible function 'add' for UFCS

import modules/_lib/math as math

fn main() {
    print(10.add(5))
}
